5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1668_1392.log
== TEST (2019-04-15 18:07:12) 
-- CODE:
agua = float(input("agua**3"))

-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:29) 
-- CODE:
agua = float(input("agua**3"))
if(30<10**3)


print(round,2)
-- ERROR:
File "XXXX", line 2
    if(30<10**3)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:40) 
-- CODE:
agua = float(input("agua**3"))
if(30<=10**3)


print(round,2)
-- ERROR:
File "XXXX", line 2
    if(30<=10**3)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:59) 
-- CODE:
agua = float(input("agua**3"))
if(30<=10**3):

else:
print(round,2)
-- ERROR:
File "XXXX", line 4
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:14:46) 
-- CODE:
agua = float(input("agua**3"))
if(30<=10**3):

else:
 print(round,2)
-- ERROR:
File "XXXX", line 4
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:16:43) 
-- CODE:
agua = float(input("m**3"))

 print
else:
 print(round,2)
-- ERROR:
File "XXXX", line 3
    print
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:21:03) 
-- CODE:
agua = float(input("m**3"))
pagar = 30
consumir = 10 m**3
if(10m**3>30)
 print
else:
 print(round,2)
-- ERROR:
File "XXXX", line 3
    consumir = 10 m**3
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:21:15) 
-- CODE:
agua = float(input("m**3"))
pagar = 30
consumir = 10 m**3
if(10m**3>30):
 print
else:
 print(round,2)
-- ERROR:
File "XXXX", line 3
    consumir = 10 m**3
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:22:08) 
-- CODE:
agua = float(input("m**3"))
pagar = 30
consumir = 10 m**3
if(10m**3>=30):
 print
else:
 print(round,2)
-- ERROR:
File "XXXX", line 3
    consumir = 10 m**3
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:22:52) 
-- CODE:
agua = float(input("m**3"))
pagar = 30
consumir = 10 m**3
if(10m**3>==30):
 print
else:
 print(round,2)
-- ERROR:
File "XXXX", line 3
    consumir = 10 m**3
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:26:47) 
-- CODE:
agua = float(input("m**3"))

if(10m**3>==30):
 print()
else:
 print(round,2)
-- ERROR:
File "XXXX", line 3
    if(10m**3>==30):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:39:42) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3 *(cliente) + 30 ),2)
else:
   print(round(3.5*(cliente) + 30),2)
-- OUTPUT:
58 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:39:57) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3 *(cliente) + 30 ),2)
else:
   print(round(3.5*(cliente) + 30),2)
-- EXECUTION TIME:
0.122548
-- TEST CASE 1:
---- input:
8.0
---- correct output:
54.0
---- user output:
58 2
-- TEST CASE 2:
---- input:
32.0
---- correct output:
142.0
---- user output:
142 2
-- TEST CASE 3:
---- input:
150.4

---- correct output:
556.4
---- user output:
556 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:40:30) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3 *(cliente) + 30 ),2)
else:
   print(round(3.5*(cliente) + 30),2)
-- OUTPUT:
58 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:41:41) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3 *(cliente) + 30 ),2)
else:
   print(round(3.50*(cliente) + 30),2)
-- OUTPUT:
58 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:41:51) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3 *(cliente) + 30 ),2)
else:
   print(round(3.50*(cliente) + 30),2)
-- EXECUTION TIME:
0.298615
-- TEST CASE 1:
---- input:
8.0
---- correct output:
54.0
---- user output:
58 2
-- TEST CASE 2:
---- input:
32.0
---- correct output:
142.0
---- user output:
142 2
-- TEST CASE 3:
---- input:
150.4

---- correct output:
556.4
---- user output:
556 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:42:36) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3,00 *(cliente) + 30 ),2)
else:
   print(round(3.50*(cliente) + 30),2)
-- OUTPUT:
58 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:44:55) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3 *(cliente) + taxa),2)
else:
   print(round(3.50*(cliente) + 30),2)
-- OUTPUT:
58 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:45:10) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3 *(cliente) + taxa),2)
else:
   print(round(3.5*(cliente) + 30),2)
-- OUTPUT:
58 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:46:09) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3 *(cliente) + taxa),2)
else:
   print(round(3.5*(cliente) + 30),2)
-- EXECUTION TIME:
0.148706
-- TEST CASE 1:
---- input:
8.0
---- correct output:
54.0
---- user output:
58 2
-- TEST CASE 2:
---- input:
32.0
---- correct output:
142.0
---- user output:
142 2
-- TEST CASE 3:
---- input:
150.4

---- correct output:
556.4
---- user output:
556 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:47:15) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3 *(cliente) + taxa),2)
else:
   print(round(3.5*(cliente) + 30),2)
-- OUTPUT:
58 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:48:12) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3 *(cliente) + taxa),2)
else:
   print(round(3.5**(cliente) + 30),2)
-- OUTPUT:
22549 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:48:31) 
-- CODE:
cliente = float(input("consumo de agua: "))
taxa = 30
if(cliente >= 10**3):
   print(round(3 *(cliente) + taxa),2)
else:
   print(round(3.5**3(cliente) + 30),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(3.5**3(cliente) + 30),2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
